--- a/Module 0 - Preparation on data handling_Márquez.ipynb
+++ b/Module 0 - Preparation on data handling_Márquez.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center> <img src=\"http://oci02.img.iteso.mx/identidad_de_instancia_2018/ITESO/Logos%20ITESO/Logo-ITESO-Principal.jpg\" align=\"center\" width=\"960\" height=\"480\"/> </center>"
+    "<center> <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/d/db/Logo_ITESO_normal.jpg/345px-Logo_ITESO_normal.jpg?20110424164901\" align=\"center\" width=\"280\" height=\"477\"/> </center>"
    ]
   },
   {
