--- a/Module 0 - Preparation on data handling_Márquez.ipynb
+++ b/Module 0 - Preparation on data handling_Márquez.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "<center> <font size = 5> Esteban Márquez Delgado </font> <br>\n",
     "   \n",
-    "<center> <font color= #555555> <font size = 4> Jun 2021 </a> | <font color= #555555> <font size = 4> Repository: <a href='https://github.com/'>Link</a></font>"
+    "<center> <font color= #555555> <font size = 4> Jun 2021 </a> | <font color= #555555> <font size = 4> Repository: <a href='https://github.com/EstebanMqz/Microstructures/blob/main/Module%200%20-%20Preparation%20on%20data%20handling_Márquez.ipynb'>Link</a></font>"
    ]
   },
   {
