--- a/Module 0 - Preparation on data handling_Márquez.ipynb
+++ b/Module 0 - Preparation on data handling_Márquez.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "<center> <font size = 5> Esteban Márquez Delgado </font> <br>\n",
     "   \n",
-    "<center> <font color= #555555> <font size = 4> Jun 2021 </a> | <font color= #555555> <font size = 4> Repository: <a href='https://github.com/EstebanMqz/Microstructures/blob/main/Module%200%20-%20Preparation%20on%20data%20handling_Márquez.ipynb'>Link</a></font>"
+    "<center> <font color= #555555> <font size = 4> Jun 2021 </a> | <font color= #555555> <font size = 4> Repository: <a href='https://github.com/EstebanMqz/Microstructures/blob/main/Module%200%20-%20Preparation%20on%20data%20handling_Márquez.ipynb/'>Link</a></font>"
    ]
   },
   {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "(811, 6)"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "Timedelta('0 days 08:00:00')"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1413,7 @@
     }
    ],
    "source": [
-    "display(ohlc_prices_jumps.head(8))"
+    "display(ohlc_prices_jumps.head(12))"
    ]
   },
   {
@@ -1425,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1679,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1696,7 +1696,7 @@
        "Name: open, dtype: float64"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1736,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1789,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1801,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1922,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1934,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2054,7 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2063,7 +2063,7 @@
        "{0, 1, 2, 3, 4, 5, 6}"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2088,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2100,7 +2100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2247,7 +2247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2258,7 +2258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2298,7 +2298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2325,7 +2325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2343,7 +2343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2352,7 +2352,7 @@
        "array([0, 8, 16], dtype=object)"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2364,7 +2364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2383,7 +2383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2659,7 +2659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2672,7 +2672,7 @@
        "Name: co, dtype: float64"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2699,7 +2699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2926,7 +2926,7 @@
        "[811 rows x 11 columns]"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3003,7 +3003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3134,7 +3134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3151,7 +3151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3444,7 +3444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3453,7 +3453,7 @@
        "Counter({1: 436, 0: 375})"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3471,7 +3471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
